--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <title>LiftMetrics</title>
   </head>
   <body>
-    <noscript>JavaScript is required to run this app.</noscript>
+    <noscript>JavaScript is required to use this website.</noscript>
     <div id="root"></div>
   </body>
 </html>
